--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
     <title>CGIpaf 1.2.3 FAQ</title>
   </head>
 
@@ -209,7 +210,7 @@ this will compile CGIpaf with FreeBSD support but without PAM support.
 </p></li>
 <li><b>NetBSD</b>
 <p>
-NetBSD is supported in development release see http://staf.patat.org/cgipaf/develop/ for more information.
+NetBSD is supported in development release see <a href="http://staf.patat.org/cgipaf/develop/">http://staf.patat.org/cgipaf/develop/</a> for more information.
 </p>
 <li><b>OpenBSD</b>
 <p>
