--- a/faq.html
+++ b/faq.html
@@ -185,7 +185,7 @@ for more information.
 <hr />
 
 <h1><a name="s2">2</a> Installation</h1>
-<h2><a name="ss2.1">2.1</a>What platforms are supported</h2>
+<h2><a name="ss2.1">2.1</a>What platforms are supported?</h2>
 
 <ul>
 <li><b>GNU/Linux</b>
