--- a/Configuration.html
+++ b/Configuration.html
@@ -4,7 +4,8 @@
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#2f009f">
-<h1>CGIpaf 1.3.0pre2 Configuration</h1>
+<h1>CGIpaf 1.3.0pre-cvs20031119<br>
+Configuration</h1>
 <h1>Content</h1>
 <ul>
 <li><a href="#syntax">Syntax</a></li>
@@ -738,7 +739,9 @@ seconds</td></tr>
 run_mailcfg script</a></td></tr>
 <tr><td><b>homedir</b></td><td>the user's home directory</td></tr>
 <tr><td><b>domain</b></td><td>the <a href="#domain">domain</a>name, only set by mailcfg.cgi</td></tr>
-<tr><td><b>user_maildomain</b></td><td>The user maildomain ( only available if <a href="#vmail_support">vmail support</a> is enabled</td>
+<tr><td><b>user_maildomain</b></td><td>The user maildomain ( only available if <a href="#vmail_support">vmail support</a> is enabled</td></tr>
+<tr><td><b>post_string</b></td><td>A string with the original HTTP POST</td></tr>
+<tr><td><b>_POST[]</b></td><td>An associative array of variables with the original HTTP POST</td></tr>
 </table>
 <h1><a name="redirect">Redirect</a></h1>
 <p> 
