--- a/Configuration.html
+++ b/Configuration.html
@@ -4,7 +4,7 @@
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#2f009f">
-<h1>CGIpaf 1.3.0pre-cvs20031119<br>
+<h1>CGIpaf 1.3.0pre-cvs20031204<br>
 Configuration</h1>
 <h1>Content</h1>
 <ul>
@@ -41,6 +41,7 @@ Configuration</h1>
 <li><a href="#error_accessdb">error_accessdb</a></li>
 <li><a href="#error_cracklib">error_cracklib</a></li>
 <li><a href="#error_mailcfgscript">error_mailcfgscript</a></li>
+<li><a href="#error_viewmailcfgscript">error_viewmailcfgscript</a></li>
 <li><a href="#error_pam">error_pam</a></li>
 <li><a href="#error_illegalword">error_illegalword</a></li>
 <li><a href="#min_uid">min_uid</a></li>
@@ -65,6 +66,7 @@ Configuration</h1>
 <li><a href="#run_before_mailcfg">run_before_mailcfg</a></li>
 <li><a href="#run_after_mailcfg">run_after_mailcfg</a></li>
 <li><a href="#run_mailcfg">run_mailcfg</a></li>
+<li><a href="#run_viewmailcfg">run_viewmailcfg</a></li>
 <li><a href="#cookie_timeout">cookie_timeout</a></li>
 <li><a href="#mailcfg_document">mailcfg_document</a></li>
 <li><a href="#error_deldotforward">error_deldotforward</a></li>
@@ -374,6 +376,16 @@ error_mailcfgscript  Redirect    <em>location</em><br>
 <p>
     <a href="#run_mailcfg">run_mailcfg</a> failed. 
 </p>
+
+<h2><a name="error_viewmailcfgscript">error_viewmailcfgscript</a></h2>
+<strong>Syntax:</strong> error_viewmailcfgscript  <em>filename</em> <b>OR</b>
+error_viewmailcfgscript  Redirect    <em>location</em><br>
+<strong>Default:</strong> "run_viewmailcfg returns a non-null value, %{mailcfg_exitcode}<br>
+<strong>Context:</strong> &lt;mailcfg&gt;
+<p>
+    <a href="#run_viewmailcfg">run_viewmailcfg</a> failed. 
+</p>
+
 <h2><a name="error_pam">error_pam</a></h2>
 <strong>Syntax:</strong> error_pam  <em>filename</em> <b>OR</b>
 error_pam  Redirect    <em>location</em><br>
@@ -558,6 +570,14 @@ error_illegalword  Redirect    <em>location</em><br>
      configuration updater is used<br>
      if set, <a href="#use_statefile">use_statefile</a> is enabled.
 </p>
+<h2><a name="run_viewmailcfg">run_viewmailcfg</a></h2>
+<strong>Syntax:</strong> run_viewmailcfg   <em>path_to_script</em>
+<strong>Default:</strong> built-in <br>
+<strong>Run as:</strong> user<br>
+<strong>Context:</strong> &lt;mailcfg&gt;
+<p>
+     define a view mail configuration script, if not set the built-in is used<br>
+</p>
 <h2><a name="run_success">run_success</a></h2>
 <strong>Syntax:</strong> run_success   <em>path_to_script</em>
 <em>stdout</em><br>
@@ -736,10 +756,12 @@ seconds</td></tr>
 <tr><td><b>password</b></td><td>the user's new password, is only set at
 <a href="#run_success">run_success</a></td></tr>
 <tr><td><b>mailcfg_exitcode</b></td><td>exitcode of the <a href="#run_mailcfg">
-run_mailcfg script</a></td></tr>
+<tr><td><b>viewmailcfg_exitcode</b></td><td>exitcode of the <a href="#viewrun_mailcfg">
+run_viewmailcfg script</a></td></tr>
 <tr><td><b>homedir</b></td><td>the user's home directory</td></tr>
 <tr><td><b>domain</b></td><td>the <a href="#domain">domain</a>name, only set by mailcfg.cgi</td></tr>
 <tr><td><b>user_maildomain</b></td><td>The user maildomain ( only available if <a href="#vmail_support">vmail support</a> is enabled</td></tr>
+<tr><td><b>message</b></td><td>A string with the default message</td></tr>
 <tr><td><b>post_string</b></td><td>A string with the original HTTP POST</td></tr>
 <tr><td><b>_POST[]</b></td><td>An associative array of variables with the original HTTP POST</td></tr>
 </table>
