--- a/Configuration.html
+++ b/Configuration.html
@@ -4,7 +4,7 @@
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#2f009f">
-<h1>CGIpaf 1.3.0pre-cvs20031204<br>
+<h1>CGIpaf 1.3.0pre-cvs20031221<br>
 Configuration</h1>
 <h1>Content</h1>
 <ul>
@@ -563,49 +563,6 @@ error_illegalword  Redirect    <em>location</em><br>
      mailboxes you must set "use_statefile" to "yes". The user's original .procmailrc
      could confuse CGIpaf.
 </p>
-<h2><a name="run_mailcfg">run_mailcfg</a></h2>
-<strong>Syntax:</strong> run_mailcfg   <em>path_to_script</em>
-<strong>Default:</strong> built-in procmailrc update<br>
-<strong>Run as:</strong> user<br>
-<strong>Context:</strong> &lt;mailcfg&gt;
-<p>
-     define a mail configuration script, if not set the built-in procmail
-     configuration updater is used<br>
-     if set, <a href="#use_statefile">use_statefile</a> is enabled.
-</p>
-<h2><a name="mailcfg_check">mailcfg_check</a></h2>
-<strong>Syntax:</strong> mailcfg_check   <em>on|off</em>
-<strong>Default:</strong> on<br>
-<strong>Context:</strong> &lt;mailcfg&gt;
-<p>
-     enables or disables mailcfg.cgi internal HTTP POST parameters checking<br>
-     you can only disable <a href="#mailcfg_check">mailcfg_check</a> if 
-     <a href="#run_mailcfg">run_mailcfg</a> is defined.
-</p>
-<h2><a name="run_viewmailcfg">run_viewmailcfg</a></h2>
-<strong>Syntax:</strong> run_viewmailcfg   <em>path_to_script</em>
-<strong>Default:</strong> built-in <br>
-<strong>Run as:</strong> user<br>
-<strong>Context:</strong> &lt;mailcfg&gt;
-<p>
-     define a view mail configuration script, if not set the built-in is used<br>
-</p>
-<h2><a name="set_script_filename">set_script_filename</a></h2>
-<strong>Syntax:</strong> set_script_filename   <em>on|off</em>
-<strong>Default:</strong> off <br>
-<strong>Run as:</strong> user<br>
-<strong>Context:</strong> &lt;passwd&gt;, &lt;mailcfg&gt;
-<p>
-     set the SCRIPT_FILENAME environment variable to the real scriptname.
-</p>
-<h2><a name="unset_script_filename">set_script_filename</a></h2>
-<strong>Syntax:</strong> unset_script_filename   <em>on|off</em>
-<strong>Default:</strong> off <br>
-<strong>Run as:</strong> user<br>
-<strong>Context:</strong> &lt;passwd&gt;, &lt;mailcfg&gt;
-<p>
-     unset the SCRIPT_FILENAME environment variable to the real scriptname.
-</p>
 <h2><a name="run_success">run_success</a></h2>
 <strong>Syntax:</strong> run_success   <em>path_to_script</em>
 <em>stdout</em><br>
@@ -654,7 +611,69 @@ error_illegalword  Redirect    <em>location</em><br>
 <br>
      This script can be used to restore the user's .procmailrc to his original
      state
-</p>        
+</p>
+<h2><a name="run_mailcfg">run_mailcfg</a></h2>
+<strong>Syntax:</strong> run_mailcfg   <em>path_to_script</em><br>
+<strong>Default:</strong> built-in procmailrc update<br>
+<strong>Run as:</strong> user<br>
+<strong>Context:</strong> &lt;mailcfg&gt;
+<p>
+     define a mail configuration script, if not set the built-in procmail
+     configuration updater is used<br>
+     if set, <a href="#use_statefile">use_statefile</a> is enabled.
+</p>
+<h2><a name="mailcfg_check">mailcfg_check</a></h2>
+<strong>Syntax:</strong> mailcfg_check   <em>on|off</em><br>
+<strong>Default:</strong> on<br>
+<strong>Context:</strong> &lt;mailcfg&gt;
+<p>
+     enables or disables mailcfg.cgi internal HTTP POST parameters checking<br>
+     you can only disable <a href="#mailcfg_check">mailcfg_check</a> if 
+     <a href="#run_mailcfg">run_mailcfg</a> is defined.
+</p>
+<p>
+     if disabled mailcfg.cgi will run <a href="#run_mailcfg">run_mailcfg</a> after
+     the authentication without testing the HTTP POST variables. This is something 
+     you must do within your <a href="#run_mailcfg">run_mailcfg</a> script.
+</p>
+
+<p>
+     if <a href="#mailcfg_check">mailcfg_check</a> is disabled:
+     <ul>
+        <li>the <b>forward</b>, <b>not_forward</b>, <b>keep_msg</b>, <b>not_keep_msg</b>,
+	    <b>autoreply</b>, <b>not_autoreply</b>, <b>autoreply_msg</b> etc 
+	    <a href="#variables">variables</a> are undefined.
+	</li>
+	<li>the <a href="#use_statefile">statefile</a> and $homedir/vacations.txt are 
+	not updated</li>
+	<li><a href="#run_before_mailcfg">run_before_mailcfg</a> and 
+	    <a href="#run_after_mailcfg">run_after_mailcfg</a> are not executed</li>
+     </ul>
+</p>
+<h2><a name="run_viewmailcfg">run_viewmailcfg</a></h2>
+<strong>Syntax:</strong> run_viewmailcfg   <em>path_to_script</em><br>
+<strong>Default:</strong> built-in <br>
+<strong>Run as:</strong> user<br>
+<strong>Context:</strong> &lt;mailcfg&gt;
+<p>
+     define a view mail configuration script, if not set the built-in is used<br>
+</p>
+<h2><a name="set_script_filename">set_script_filename</a></h2>
+<strong>Syntax:</strong> set_script_filename   <em>on|off</em><br>
+<strong>Default:</strong> off <br>
+<strong>Run as:</strong> user<br>
+<strong>Context:</strong> &lt;passwd&gt;, &lt;mailcfg&gt;
+<p>
+     set the SCRIPT_FILENAME environment variable to the real scriptname.
+</p>
+<h2><a name="unset_script_filename">set_script_filename</a></h2>
+<strong>Syntax:</strong> unset_script_filename   <em>on|off</em><br>
+<strong>Default:</strong> off <br>
+<strong>Run as:</strong> user<br>
+<strong>Context:</strong> &lt;passwd&gt;, &lt;mailcfg&gt;
+<p>
+     unset the SCRIPT_FILENAME environment variable.
+</p>
 <h2><a name="cookie_timeout">cookie_timeout</a></h2>
 <strong>Syntax:</strong>   cookie_timeout    <em>seconds</em>
 <strong>Default:</strong> 300<br>
