Configuration.html updated

--- a/Configuration.html
+++ b/Configuration.html
@@ -4,7 +4,7 @@
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#2f009f">
-<h1>CGIpaf 1.3.0pre-cvs20031221<br>
+<h1>CGIpaf 1.3.0rc1<br>
 Configuration</h1>
 <h1>Content</h1>
 <ul>
@@ -69,7 +69,7 @@ Configuration</h1>
 <li><a href="#mailcfg_check">mailcfg_check</a></li>
 <li><a href="#run_viewmailcfg">run_viewmailcfg</a></li>
 <li><a href="#set_script_filename">set_script_filename</a></li>
-<li><a href="#unset_script_filename">set_script_filename</a></li>
+<li><a href="#unset_script_filename">unset_script_filename</a></li>
 <li><a href="#cookie_timeout">cookie_timeout</a></li>
 <li><a href="#mailcfg_document">mailcfg_document</a></li>
 <li><a href="#error_deldotforward">error_deldotforward</a></li>
@@ -666,7 +666,7 @@ error_illegalword  Redirect    <em>location</em><br>
 <p>
      set the SCRIPT_FILENAME environment variable to the real scriptname.
 </p>
-<h2><a name="unset_script_filename">set_script_filename</a></h2>
+<h2><a name="unset_script_filename">unset_script_filename</a></h2>
 <strong>Syntax:</strong> unset_script_filename   <em>on|off</em><br>
 <strong>Default:</strong> off <br>
 <strong>Run as:</strong> user<br>
