patat.org -> wagemakers.be

--- a/faq.html
+++ b/faq.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <title>CGIpaf 1.3.0 FAQ</title>
+    <title>CGIpaf 1.3.1 FAQ</title>
   </head>
 
   <body>
     
-    <h1>CGIpaf 1.3.0 FAQ</h1>
+    <h1>CGIpaf 1.3.1 FAQ</h1>
     <p>
     <h2>1 <a href="#s1">Introduction to CGIpaf</a></h2>
     <ul>
@@ -111,27 +111,16 @@ are send unencrypted over the internet.
 <h2><a name="ss1.3">1.3 </a>Website</h2>
 
 <p>
-I finally got a stable place for my homepage ( <a href="http://staf.patat.org">http://staf.patat.org</a> ).<br>
-<strong>thanks</strong> to <a href="http://www.patat.org/~kbr/">"de pirre"</a> for hosting my site.
+I finally got a stable place for my homepage ( <a href="http://www.wagemakers.be">http://www.wagemakers.be</a> ).<br>
+<strong>thanks</strong> to <a href="http://www.procolix.com/">ProcoliX</a> for hosting my site and sponsoring my domain.
 <p>
 The current locations are:
 </p>
 
 <ul>
-<li><a href="http://staf.patat.org">http://staf.patat.org/cgipaf/</a> (Europe / Belgium) main site<br>&nbsp;</li>
-<li><a href="http://stafwag.netfirms.com/cgipaf/">http://stafwag.netfirms.com/cgipaf/</a> (North America / Canada)
-<p>
-Has a problem when you try to download the debian package with apt-get, because they add an ad to the 
-Package file. Please use the main site <a href="http://staf.patat.org/debian/">http://staf.patat.org/debian/</a>
-to download the debian package with apt-get.
-</p>
+<li>main site: <a href="http://www.wagemakers.be/english/programs/cgipaf">http://www.wagemakers.be/english/programs/cgipaf</a></li>
 </li>
-<li><a href="http://stafwag.pws.the-ecorp.com/cgipaf/">http://stafwag.pws.the-ecorp.com/cgipaf/</a> (Europe / Belgium)
-<p>
-The last one is hosted by my current employer, we're in the middle of a reorganization (again).
-Due the current economical situation I'm not sure my employer will continue to provide free webspace.<br>
-... or will continue to pay me ;-)
-</p>
+<li>debian packages: <a href="http://users.skynet.be/wagemakers/debian/">http://users.skynet.be/wagemakers/debian/</a>
 </li>
 </ul>
 <p>
@@ -434,10 +423,10 @@ flexible) the authentication works but the PAM password changer doesn't -weird-.
 The OpenBSD port is still in the pipeline.
 </p>
 <hr>
-    <address><a href="mailto:staf@patat.org">staf wagemakers</a></address>
+    <address><a href="mailto:staf at wagemakers.be">staf wagemakers</a></address>
 <!-- Created: Mon Apr  8 20:42:51 CEST 2002 -->
 <!-- hhmts start -->
-Last modified: Wed Apr 21 15:57:10 CEST 2004
+Last modified: Wed Jul 13 13:25:14 CEST 2004
 <!-- hhmts end -->
   </body>
 </html>
